feat: 测试antdv组件封装

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "basic-ui",
-  "version": "0.0.0",
+  "name": "varlet-demo-ui",
+  "version": "1.0.0-alpha.1646549737550",
   "description": "A basic components library",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -100,5 +100,8 @@
     "umd",
     "highlight",
     "types"
-  ]
+  ],
+  "dependencies": {
+    "ant-design-vue": "^2.2.8"
+  }
 }
