--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "varlet-demo-ui",
-  "version": "1.0.0-alpha.1646549737550",
+  "version": "1.0.1",
   "description": "A basic components library",
   "main": "lib/index.js",
   "module": "es/index.js",
